fix(ui5-combobox): white space below the value state message presented

--- a/packages/main/src/themes/ValueStateMessage.css
+++ b/packages/main/src/themes/ValueStateMessage.css
@@ -38,7 +38,6 @@
 	font-family: "72override", var(--sapFontFamily);
 	height: auto;
 	padding: var(--_ui5_value_state_message_padding);
-	overflow: hidden;
 	text-overflow: ellipsis;
 	min-width: 6.25rem;
 	border: var(--_ui5_value_state_message_border);
